--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 build = "build.rs"
 
 [build-dependencies]
-sixtyfps-build = "0.1.5"
+sixtyfps-build = "^0.1.5"
 
 [dependencies]
 # Quality of Life
@@ -16,7 +16,7 @@ anyhow = "^1"
 
 # Interface
 clap = { version = "^3", default-features = false, features = ["std", "derive"] }
-sixtyfps = { version = "0.1.5", default-features = false, features = ["backend-qt"] }
+sixtyfps = { version = "^0.1.5", default-features = false, features = ["backend-qt"] }
 
 # Data
 image = { version = "^0.23", default-features = false, features = ["jpeg_rayon"] }
@@ -31,7 +31,7 @@ reqwest = { version = "^0.11", default-features = false, features = ["json","tru
 
 # Logging
 tracing = { version = "^0.1", features = ["log", "release_max_level_debug"] }
-tracing-subscriber = "0.3"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 [profile.release]
 lto = "thin"
