Add more weather information: current weather and 2 h forecast
Icon theme hardcoded for now to Arc.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ slint-build = "^1"
 [dependencies]
 # Quality of Life
 anyhow = "^1"
+num_enum = "0.6"
+itertools = "0.11"
 
 # Interface
 clap = { version = "^4", default-features = false, features = ["std", "derive", "help"] }
